# django-rest-api-labs

./: pyproject.toml
labs/: settings.py  urls.py
quickstart/: serializers.py  views.py
snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py
tutorial/: asgi.py  settings.py  urls.py
