[project]
name = "django-rest-api-labs"
version = "0.1.0"
description = ""
authors = [
    {name = "rodrigo.resque",email = "rodrigo.resque@tjpa.jus.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "django_rest_api_labs", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
